--- a/PdfExtract/PdfExtract.csproj
+++ b/PdfExtract/PdfExtract.csproj
@@ -4,14 +4,17 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>7d477e9b-f786-48a4-bb54-a053c0d3cabc</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.AI.AzureAIInference" Version="9.5.0-preview.1.25265.7" />
         <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.11.9"/>
         <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.11.9"/>
         <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.5" />
         <PackageReference Include="OllamaSharp" Version="5.1.18" />
         <PackageReference Include="PDFtoImage" Version="5.1.0" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
